[project]
name = "deep-feedback-models"
dynamic = ["version"]
description = "A set of python modules that implement feedback in well known neural architectures"
readme = "README.md"
maintainers = [
    {name = "DCalhas", email="david.calhas@tecnico.ulisboa.pt"},
]
dependencies = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "scikit-image==0.23.2",
  "opencv-python==4.9.0.80",
  "numpy==1.24.4",
  "Pillow==10.2.0",
  "segmentation_models_pytorch==0.4.0",
  "six==1.16.0"
]
keywords = ["deep feedback models", "image segmentation", "deep learning", "learning", "machine learning", "computer vision"]
requires-python = ">=3.10"